2002-01-23  Damon Chaplin  <damon@ximian.com>

	* configure.in: bumped the version to 0.9, so GTK+ can depend on this
	if it wants to.

	* gtkdoc-scangobj.in: we now default to calling g_type_init() to
	initialize the type system, rather than gtk_init(). This means you
	don't need an X connection to build the docs any more. Hurrah!
	Also added a '--type-init-func' argument so you can change the
	function to be called. GTK+ uses --type-init-func="gtk_type_init(0)".

	* gtkdoc-scan.in (ScanHeader): removed 'Found object' debug message.

2002-01-18  Damon Chaplin  <damon@ximian.com>

	* Released 0.8.

2002-01-18  Damon Chaplin  <damon@ximian.com>

	* Makefile.am (EXTRA_DIST): added gtk-doc.dcl to EXTRA_DIST.

2002-01-18  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-scangobj.in: Reverted jacob's patch for this release, since
	it breaks GTK+ and possibly other packages. I'll re-apply it after
	the release, so we can fix everything in CVS.

2002-01-18  jacob berkman  <jacob@ximian.com>

	* gtkdoc-scangobj.in: default to calling g_type_init(), remove
	--nogtkinit argument and replace with a more flexible
	--type-init-func

2002-01-18  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mkdb.in (ScanSourceFile): patch from Matthias Clasen
	<matthiasc@poet.de> to only strip first space after '*' in source
	code comment blocks, so example code can be indented as desired.
	Bug #68216.

Wed Nov 21 16:50:35 2001  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mkdb,tmpl.in: Add some extra quoting to
	error messages to make it clearer what is going on
	with trailing commas on enumeration declarations.

Wed Nov 21 16:00:45 2001  Owen Taylor  <otaylor@redhat.com>

	* Applied patch from Matthias Clasen to use a modified
	.dcl file with the 44 character name length limit removed.
	(#61342)

2001-10-17  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mkdb.in: applied patch from Matthias Clasen
	<matthiasc@poet.de> to take a --sgml-mode argument which means