@@ -1,3 +1,8 @@
+2002-01-24  Damon Chaplin  <damon@ximian.com>
+
+	* tools/gtk-doc.el: added Zucchi's emacs lisp for automatically adding
+	skeleton comment blocks above functions. Very handy!
+
 2002-01-23  Damon Chaplin  <damon@ximian.com>
 
 	* configure.in: bumped the version to 0.9, so GTK+ can depend on this
